reworked /grouprequest page

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupRequest.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupRequest.jspx
@@ -12,6 +12,8 @@
 	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/bs"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav"
+	xmlns:bsform="urn:jsptagdir:/WEB-INF/tags/bstags/bs/form"
+	xmlns:form="http://www.springframework.org/tags/form"
 	xmlns:grouprequest="urn:jsptagdir:/WEB-INF/tags/bstags/grouprequest"> 
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -59,7 +61,31 @@
 				</jsp:attribute>
 			</bs:alert>
 
-			<grouprequest:request command="${command}"/>
+				<c:set var="loginUser" value="${command.context.loginUser}" />
+
+				<fieldset class="fsOuter">
+					<c:if test="${!loginUser.spammer}">
+						<!-- Request a new group -->
+						<bsform:fieldset legendKey="settings.group.reqGroup">
+							<jsp:attribute name="content">
+								<form:form method="post" action="/grouprequest?action=REQUEST" cssClass="form-horizontal">
+									<input type="hidden" name="ckey" value="${ckey}"/>
+									<input type="hidden" name="operation" value="REQUEST" />
+									
+									<bsform:input labelKey="settings.group.name" path="group.name" labelColSpan="3" inputColSpan="9" />
+									<bsform:textarea labelKey="settings.group.description" path="group.description" rows="2"  labelColSpan="3" inputColSpan="9" />
+									<bsform:textarea labelKey="settings.group.reqReason" path="group.groupRequest.reason" rows="2"  labelColSpan="3" inputColSpan="9" />
+			
+									<div class="col-sm-offset-3" >
+										<bsform:button style="success" size="defaultSize" value="submit${settings.group.reqGroup.button}" type="submit" />
+									</div>
+								</form:form>
+							</jsp:attribute>
+						</bsform:fieldset>
+			
+					</c:if>
+				</fieldset>
+			
 
 		</jsp:attribute>
 	</layout:paneLayout>
