--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -808,7 +808,8 @@ div.newsbox ul.news {
 	list-style: none;
 }
 
-#recommendedTags li:not(.keepme) {
+#recommendedTags li:not(.keepme),
+#copiedTags li:not(.keepme) {
 	background-color: @main-color;
 	color: #fff;
 	font-size: 14px;
